--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "axios": "^1.9.0",
+    "framer-motion": "^12.23.25",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
